fix spacing for fixed nav on sign in and sign up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,13 +30,9 @@
  a:active {
    color: #607d8b;
  }
-
-// .nav-top{
-//   font-weight: bold;
-// }
-// .nav-bottom{
-//   font-weight: bold;
-// }
+ .signInUp{
+   margin-top:20px;
+ }
 h1{
   font-family: 'Open Sans', sans-serif;
   text-shadow: 20%;
